# rvnbinresource

./: CMakeLists.txt  README.md
include/: common.h  metadata.h  reader.h  writer.h
src/: metadata.cpp  reader.cpp  writer.cpp
test/: CMakeLists.txt  test_metadata.cpp  test_read_write.cpp  test_reader.cpp  test_writer.cpp
